deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-metronic-9
  namespace: vite-metronic-9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-metronic-9
  template:
    metadata:
      labels:
        app: vite-metronic-9
    spec:
      containers:
        - name: vite-metronic-9
          image: image-registry.openshift-image-registry.svc:5000/vite-metronic-9/vite-metronic-9:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
