service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-metronic-9
  namespace: vite-metronic-9
spec:
  selector:
    app: vite-metronic-9
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
